Solucionado el junte de dos barras azules en la seccion quienes somos, se reordeno las estructura de la seccion. Se ajustaron las cards de la seccion destacados, insertando cada card dentro de su propio contenedor y ajustando las separaciones. tb se aplico el color correspondiente a la seccion. Problema carrusel corregido. Se establecio un tamano maximo para la imagenes, ya que estaban configuradas para usar el ancho completo de su contenedor y eso hacia que se achicaran y generaran espacios vacios.  NAVABAR CONTINUA CON FIXED-TOP, solucion por el momento para que este quede sobre las imagenes del carrusel, queda ver alternativas y corregir de ser necesario, agregar JS solicitado y demas requerimientos. q

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <section id="texto">
 
     <!-- C A R R U S E L -->
-    <header>
+    <header class="row">
       <div id="carouselExample" class="carousel slide" data-bs-ride="carousel" data-bs-interval="1800">
         <div class="carousel-inner carousel-fade">
           <div class="carousel-item active">
@@ -134,15 +134,16 @@
 
       <section class="container mt-5">
       <div class="row text-left">
-        <div class="col-md-4">
+        <div class="col-md-4 mt-5">
           <div class="icono-quienes-somos"><i class="fa-solid fa-plane-departure"></i></div>
           <p class="fs-5 mt-4">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Unde, et fuga quibusdam accusamus aliquam delectus repellat harum eaque at facilis! Praesentium deserunt ad nobis mollitia eos, maiores atque quod pariatur. Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere mollitia est doloremque consequatur illum? Accusantium obcaecati provident doloribus aliquam esse. Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus quis veniam nulla dolorum sequi tempore odit autem suscipit obcaecati quibusdam. </p>
         </div>
-        <div class="col-md-4">
-          <p class="fs-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem vero est incidunt! Doloremque fugiat excepturi atque sit veritatis asperiores soluta, deserunt officiis dicta ex hic non, ab dignissimos tempora inventore? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo illo blanditiis dignissimos quasi quos veritatis! Ea dolore aspernatur nemo iste! Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem vero non voluptas quas voluptates id labore cupiditate autem atque inventore. </p>
-          <div class="icono-quienes-somos mt-4"><i class="fa-solid fa-mountain"></i></div>
+        <div class="col-md-4 mt-5">
+          <div class="icono-quienes-somos"><i class="fa-solid fa-mountain"></i></div>
+          <p class="fs-5 mt-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem vero est incidunt! Doloremque fugiat excepturi atque sit veritatis asperiores soluta, deserunt officiis dicta ex hic non, ab dignissimos tempora inventore? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo illo blanditiis dignissimos quasi quos veritatis! Ea dolore aspernatur nemo iste! Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem vero non voluptas quas voluptates id labore cupiditate autem atque inventore. </p>
+
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4 mt-5">
           <div class="icono-quienes-somos"><i class="fa-solid fa-route"></i></div>
           <p class="fs-5 mt-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat ducimus nobis unde, explicabo, veniam sunt error ipsa quibusdam ut similique quos! Illo dolores eos voluptas sed ullam, beatae quis temporibus? Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia aspernatur cumque adipisci reprehenderit debitis dolor? A suscipit iusto accusantium culpa! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsa eaque debitis aliquid, nesciunt perspiciatis error voluptas ipsam commodi blanditiis </p>
         </div>
@@ -155,41 +156,52 @@
 
       <div class="container mt-5">
       <section class="row">
-      <div class="card col-md-3 p-0">
-        <img src="./assets/img/card1.jpg" class="card-img-top" alt="Patagonia Chilena" />
-        <div class="card-body">
-          <p class="card-text fs-5">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem id nesciunt quibusdam minima qui commodi quis maiores odio officia quod, totam, iure saepe voluptatibus! Nostrum suscipit placeat vitae deserunt ducimus.
-          </p>
-        </div>
+
+
+      <div class="col-md-3 my-3">
+          <div  class="card p-0" id="cont-foto">
+            <img src="./assets/img/card1.jpg" class="card-img-top" alt="Patagonia Chilena" />
+            <div class="card-body">
+              <p class="card-text fs-5">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem id nesciunt quibusdam minima qui commodi quis maiores odio officia quod, totam, iure saepe voluptatibus! Nostrum suscipit placeat vitae deserunt ducimus.
+              </p>
+            </div>
+          </div>
       </div>
 
-      <div class="card col-md-3 p-0">
-        <img src="./assets/img/card2.jpg" class="card-img-top" alt="Lagos Chilenos" />
-        <div class="card-body">
-          <p class="card-text fs-5">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem id nesciunt quibusdam minima qui commodi quis maiores odio officia quod, totam, iure saepe voluptatibus! Nostrum suscipit placeat vitae deserunt ducimus.
-          </p>
-        </div>
+      <div class="col-md-3 my-3">
+          <div class="card p-0" id="cont-foto">
+            <img src="./assets/img/card2.jpg" class="card-img-top" alt="Patagonia Chilena" />
+            <div class="card-body">
+              <p class="card-text fs-5">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem id nesciunt quibusdam minima qui commodi quis maiores odio officia quod, totam, iure saepe voluptatibus! Nostrum suscipit placeat vitae deserunt ducimus.
+              </p>
+            </div>
+          </div>
       </div>
 
-      <div class="card col-md-3 p-0">
-        <img src="./assets/img/card3.jpg" class="card-img-top" alt="Desiertos Chilenos" />
-        <div class="card-body">
-          <p class="card-text fs-5">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem id nesciunt quibusdam minima qui commodi quis maiores odio officia quod, totam, iure saepe voluptatibus! Nostrum suscipit placeat vitae deserunt ducimus.
-          </p>
-        </div>
+      <div class="col-md-3 my-3">
+          <div class="card p-0" id="cont-foto">
+            <img src="./assets/img/card3.jpg" class="card-img-top" alt="Patagonia Chilena" />
+            <div class="card-body">
+              <p class="card-text fs-5">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem id nesciunt quibusdam minima qui commodi quis maiores odio officia quod, totam, iure saepe voluptatibus! Nostrum suscipit placeat vitae deserunt ducimus.
+              </p>
+            </div>
+          </div>
       </div>
 
-      <div class="card col-md-3 p-0">
-        <img src="./assets/img/card4.jpg" class="card-img-top" alt="Bosques Chilenos" />
-        <div class="card-body">
-          <p class="card-text fs-5">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem id nesciunt quibusdam minima qui commodi quis maiores odio officia quod, totam, iure saepe voluptatibus! Nostrum suscipit placeat vitae deserunt ducimus.
-          </p>
-        </div>
+      <div class="col-md-3 my-3">
+          <div class="card p-0" id="cont-foto">
+            <img src="./assets/img/card4.jpg" class="card-img-top" alt="Patagonia Chilena" />
+            <div class="card-body">
+              <p class="card-text fs-5">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem id nesciunt quibusdam minima qui commodi quis maiores odio officia quod, totam, iure saepe voluptatibus! Nostrum suscipit placeat vitae deserunt ducimus.
+              </p>
+            </div>
+          </div>
       </div>
+
       </section>
       </div>
       <!-- F O R M  -->
